# flood_risk

./: .gitignore  README.md  app.py  db.sqlite3  pyproject.toml  random_points.csv  replit.nix  requirements.txt  stormwater_assessment.db
SCM/: Database_Access_Information.docx  Final_Presentation_Slides.pptx  Stormwater_Infrastructure_Assessment_Project_Deliverables.docx  app.py  database_access.md  final_presentation_slides.md  project_deliverables.md  project_manual.md  pyproject.toml  replit.nix  stormwater_assessment.db
SCM/attached_assets/: Pasted-1-Introduction-As-part-of-the-capstone-project-conclusion-this-document-consolidates-all-final-de-1744669939030.txt  Pasted-1-Stormwater-Condition-Assessment-Features-Stormwater-Hydraulic-Asset-Condition-SHAC-Pipe-diamet-1740686356205.txt  Pasted-Final-Project-Deliverables-Document-Stormwater-Infrastructure-Assessment-Model-Prepared-by-Stepha-1744670091838.txt
SCM/components/: charts.py  forms.py  gis_integration.py  heat_map.py  map_view.py  org_tree.py  sunburst.py
SCM/temp/: Sample Assessment.doc
SCM/utils/: auth.py  db.py  documentation_generator.py  report.py
SCM/views/: __init__.py  admin.py  assessment.py  dashboard.py  documentation.py  projects.py
attached_assets/: Pasted-Failed-to-connect-to-MongoDB-SSL-handshake-failed-cluster0-shard-00-02-i302q-mongodb-net-27017-S-1740688213816.txt  Pasted-Failed-to-connect-to-MongoDB-SSL-handshake-failed-cluster0-shard-00-02-i302q-mongodb-net-27017-S-1740688413755.txt
components/: charts.py  forms.py
flood_risk/: apps.py  models.py  urls.py  views.py
(+25 files in other folders)
