[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=4.2.1",
    "certifi>=2025.1.31",
    "folium>=0.19.5",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "pymongo>=4.11.1",
    "reportlab>=4.3.1",
    "streamlit-folium>=0.24.0",
    "streamlit>=1.42.2",
    "openai>=1.68.2",
    "pyproj>=3.7.1",
    "geopandas>=1.0.1",
    "shapely>=2.0.7",
    "trafilatura>=2.0.0",
    "svglib>=1.5.1",
]
